Fix spacing

--- a/app/assets/stylesheets/layout/_reader_aids.scss
+++ b/app/assets/stylesheets/layout/_reader_aids.scss
@@ -34,6 +34,8 @@
       padding: 0;
 
       h5 { margin-top: 0; }
+
+      .doc-subscribe { margin-bottom: 15px; }
     }
 
     .effective-dates-table {
